<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/my_gradient">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_horizontal"
        app:layout_constraintGuide_begin="250dp"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_vertical"
        app:layout_constraintGuide_begin="50dp"
        android:orientation="vertical"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_gradient"/>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"/>

    <EditText
        android:id="@+id/edit_txt_login"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_login"
        android:shadowColor="@color/black"
        android:background="@drawable/edit_text"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/txt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_senha"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_login"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"/>

    <EditText
        android:id="@+id/edit_txt_senha"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:hint="@string/hint_senha"
        android:shadowColor="@color/black"
        android:background="@drawable/edit_text"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@id/txt_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_btn_login"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:background="@color/dark_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_senha"/>

</androidx.constraintlayout.widget.ConstraintLayout>